# handlers/transaction_handler.go
@@ -1,0 +1,55 @@
+package handlers
+
+import (
+	"encoding/json"
+	"kasir-api/models"
+	"kasir-api/services"
+	"net/http"
+)
+
+type TransactionHandler struct {
+	service *services.TransactionService
+}
+
+func NewTransactionHandler(service *services.TransactionService) *TransactionHandler {
+	return &TransactionHandler{service: service}
+}
+
+// get multiple items
+func (h *TransactionHandler) HandleCheckout(w http.ResponseWriter, r *http.Request) {
+	switch r.Method {
+	case http.MethodPost:
+		h.Checkout(w, r)
+	default:
+		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+	}
+}
+
+// godoc
+// @Summary Checkout items
+// @Description Checkout multiple items with transaction
+// @Tags transactions
+// @Accept json
+// @Produce json
+// @Param items body models.CheckoutRequest true "Items to checkout"
+// @Success 201 {object} models.Transaction
+// @Failure 400 {string} string "Invalid request"
+// @Failure 500 {string} string "Internal server error"
+// @Router /api/checkout [post]
+func (h *TransactionHandler) Checkout(w http.ResponseWriter, r *http.Request) {
+	var req models.CheckoutRequest
+	err := json.NewDecoder(r.Body).Decode(&req)
+	if err != nil {
+		http.Error(w, "Invalid request body", http.StatusBadRequest)
+		return
+	}
+
+	transaction, err := h.service.Checkout(req.Items, true)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(transaction)
+}
